Lot of progress on map editor

--- a/Hell/Hell.vcxproj
+++ b/Hell/Hell.vcxproj
@@ -163,13 +163,19 @@
     <ClCompile Include="src\Animation\SkinnedModel.cpp" />
     <ClCompile Include="src\Audio\Audio.cpp" />
     <ClCompile Include="src\Core\EntityStatic.cpp" />
+    <ClCompile Include="src\Core\File.cpp" />
     <ClCompile Include="src\Core\GameCharacter.cpp" />
+    <ClCompile Include="src\Core\GameData.cpp" />
     <ClCompile Include="src\Core\Player.cpp" />
     <ClCompile Include="src\Core\Scene.cpp" />
+    <ClCompile Include="src\Editor\Editor.cpp" />
     <ClCompile Include="src\Effects\BloodPool.cpp" />
     <ClCompile Include="src\HellEngine.cpp" />
     <ClCompile Include="src\Helpers\AssetManager.cpp" />
     <ClCompile Include="src\Helpers\FileImporter.cpp" />
+    <ClCompile Include="src\House\Door.cpp" />
+    <ClCompile Include="src\House\Room.cpp" />
+    <ClCompile Include="src\House\Wall.cpp" />
     <ClCompile Include="src\Physics\ContactReportCallback.cpp" />
     <ClCompile Include="src\Physics\PhysX.cpp" />
     <ClCompile Include="src\Physics\Ragdoll.cpp" />
@@ -201,13 +207,19 @@
     <ClInclude Include="src\Animation\SkinnedModel.h" />
     <ClInclude Include="src\Audio\Audio.h" />
     <ClInclude Include="src\Core\EntityStatic.h" />
+    <ClInclude Include="src\Core\File.h" />
     <ClInclude Include="src\Core\GameCharacter.h" />
+    <ClInclude Include="src\Core\GameData.h" />
     <ClInclude Include="src\Core\Player.h" />
     <ClInclude Include="src\Core\Scene.h" />
+    <ClInclude Include="src\Editor\Editor.h" />
     <ClInclude Include="src\Effects\BloodPool.h" />
     <ClInclude Include="src\HellEngine.h" />
     <ClInclude Include="src\Helpers\AssetManager.h" />
     <ClInclude Include="src\Helpers\FileImporter.h" />
+    <ClInclude Include="src\House\Door.h" />
+    <ClInclude Include="src\House\Room.h" />
+    <ClInclude Include="src\House\Wall.h" />
     <ClInclude Include="src\Physics\ContactReportCallback.h" />
     <ClInclude Include="src\Physics\PhysX.h" />
     <ClInclude Include="src\Physics\Ragdoll.h" />
@@ -248,6 +260,8 @@
     <None Include="res\shaders\skinnedmodel.vert" />
     <None Include="res\shaders\solidColor.frag" />
     <None Include="res\shaders\solidColor.vert" />
+    <None Include="res\shaders\solidColorEditor.frag" />
+    <None Include="res\shaders\solidColorEditor.vert" />
     <None Include="res\shaders\test.frag" />
     <None Include="res\shaders\test.vert" />
     <None Include="res\shaders\textured2DquadShader.frag" />
